--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -3,16 +3,20 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+h1 {
+    text-align: center;
+}
+
 .sudoku-cell {
     background-color: #eeeeee;
-    font-size: 3em;
+    font-size: 2em;
     text-align: center;
     padding: 10px;
     width: 1em;
     height: 1em;
     border-color: #111111;
     border-style: solid;
-    border-width: 3px;
+    border-width: 2px;
 }
 
 .sudoku-cell.unsolved {
@@ -26,6 +30,7 @@ body {
 [add-border-right=""] {
     border-right-width: 8px;
     margin-right: -4px;
+    margin-left: -2px; /* fixes random issue? */
 }
 [add-border-left=""] {
     border-left-width: 8px;
@@ -44,8 +49,7 @@ body {
 }
 
 .wrapper {
-    margin: auto;
-    width: 75%;
+    text-align: center;
 }
 
 button {
